adding cross platform loading service

--- a/lib/scss/bootstrap.scss
+++ b/lib/scss/bootstrap.scss
@@ -1,3 +1,6 @@
 @import "./variables";
 // Include all of Ionic
 @import "~ionic-sdk/scss/ionic";
+
+@import "./helper";
+@import "../network/index";
