Upgrade to Ionic 1.3.1

--- a/lib/scss/bootstrap.scss
+++ b/lib/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 @import "./variables";
 // Include all of Ionic
-@import "~ionic-sdk/scss/ionic";
+@import "~ionic-angular/scss/ionic";
 
 @import "./helper";
 @import "../network/index";
