--- a/lib/scss/_variables.scss
+++ b/lib/scss/_variables.scss
@@ -16,4 +16,4 @@ $balanced: $secondary-text-color;
 $base-color: $primary-color-text;
 
 // Ionicons font path
-$ionicons-font-path: "~ionic-sdk/release/fonts" !default;
+$ionicons-font-path: "~ionic-angular/release/fonts" !default;
